styles.css
/* RESET STYLES */
*, *::before, *::after {
    box-sizing: border-box;
}

* {
    margin: 0;
}

body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
}

img, picture, video, canvas, svg {
    display: block;
    max-width: 100%;
}

input, button, textarea, select {
    font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
}

p {
    text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
    text-wrap: balance;
}

#root, #__next {
    isolation: isolate;
}

body {
    display: grid;
    height: 100vh;
    margin: 0;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: 1.3fr 8fr;
    grid-template-areas: 
    "dashboard header"
    "dashboard mainPage";
    font-family: "Roboto";
    background-color: rgb(199, 199, 199);
}

/* DASHBOARD STYLES */
.dashboard {
    grid-area: dashboard;
    grid-row: 1 / 3;
    background-color: #0ea5e9;
    color: white;
    font-weight: bold;
    display: flex;
    flex-direction: column;
    z-index: 3;
    height: 100vh;
    overflow: auto;
    min-width: 250px;
    box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.226);
}

.dashboard > .toprow {
    display: flex;
    gap: 1vw;
    margin-left: 1vw;
    margin-bottom: 5vh;
    margin-top: 1.5vh;
    align-items: center;
    cursor: pointer;
}

.dashboardTitleImg {
    filter: invert(100%);
    height: 7vh;
}

.dashboardTitle {
    font-size: 2rem;
}

.dashboard > .row {
    display: flex;
    gap: 2vw;
    padding-top: 1vh;
    padding-bottom: 1vh;
    padding-left: 2vw;
    align-items: center;
    cursor: pointer;
    overflow: hidden;
    font-size: 20px;
}

.dashboard > .row:hover {
    background-color: #74bfe2;
}

.dashboard > .row > .img {
    filter: invert(100%);
    height: 4vh;
}

.dashboard > .separator {
    margin-bottom: 5vh;
}

/* HEADER STYLES*/
.header {
    grid-area: header;
    height: 17vh;
    grid-column: 2 / 4;
    background-color: white;
    display: grid;
    grid-row: repeat(2, 1fr);
    padding: 1vh 4vw 1vh 2vw;
    box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.226);
    z-index: 2;
    min-height: 200px;
}

/* toprow */
.header > .toprow {
    display: flex;
    align-items: center;
}

.header > .toprow > .img {
    height: 25px;
}

.header > .toprow > .searchIcon {
    margin-right: 1vw;
    cursor: pointer;
}

.searchIcon:hover {
    filter: invert(83%) sepia(30%) saturate(7118%) hue-rotate(7deg) brightness(100%) contrast(101%);
}


.header > .toprow > .notifIcon {
    margin-left: auto;
    cursor: pointer
}

.notifIcon:hover {
    filter: invert(83%) sepia(30%) saturate(7118%) hue-rotate(7deg) brightness(100%) contrast(101%);
}

.header > .toprow > .searchBar {
    background-color: rgb(187, 187, 187);
    width: 40vw;
    height: 25px;
    border-radius: 50px;
    outline: none;
    border: none;
    border-style: none;
    font-size: 1rem;
    padding-left: 1vw;
}

.header > .toprow > .userImg {
    height: 45px;
    margin-left: 2vw;
    border-radius: 50%;
    cursor: pointer;
}

.header > .toprow > .userRealName {
    margin-left: 1vw;
    font-weight: bold;
    cursor: pointer;
}

.userRealName:hover {
    color: rgb(233, 178, 0)
}

/* bottomrow */
.header > .bottomrow {
    display:flex;
    align-items: center;
}

.header > .bottomrow > .userImg {
    height: 65px;
    border-radius: 50%;
}

.header > .bottomrow > .intro {
    display:flex;
    flex-direction: column;
    font-weight: bold;
    padding-left: 1vw;
}

.header > .bottomrow > .intro > .greeting {
    font-size: 1vw;
}

.header > .bottomrow > .intro > .userGreeting {
    font-size: 2vw;
}

.header > .bottomrow > .buttons {
    display:flex;
    border-radius: 3vw;
    margin-left: auto;
    gap: 2vw;
    font-weight: bold;
    font-size: 15px;
    text-align: center;
    vertical-align: center;
}

.header > .bottomrow > .buttons > button {
    background: #0ea5e9;
    color: white;
	border: none;
	cursor: pointer;
    border-radius: 15px;
    height: 45px;
    width: 7vw;
}

.header > .bottomrow > .buttons > button:hover {
    background-color: #74bfe2;
}

/* MAIN PROJECT SECTION */

.mainPage {
    grid-area: mainPage;
    background-color: rgb(199, 199, 199);
    display: grid;
    grid-template-columns: 3fr 1fr;
    padding: 3vh 2vw;
    height: 83vh;
}

/* projects */
.mainPage > .projects {
    display: grid;
    grid-template-rows: 1fr 40fr;
    padding-right: 5vw;
    height: 75vh;
}

.mainPage > .projects > .mainTitle {
    font-size: 1.1rem;
    padding-bottom: 1vh;
    font-weight: bold;
}

.mainPage > .projects > .cards {
    display: grid;
    grid-template-rows: repeat(3, clamp(20vh, 20vh, 1fr));
    grid-template-columns: repeat(auto-fill, minmax(17vw, 1fr));
    gap: 2vmin;
}

.mainPage > .projects > .cards > .card {
    background-color: white;
    border-radius: 10px;
    padding: 3vh 2vw;
    border-left: 0.7vw solid rgb(233, 178, 0);
    display:flex;
    flex-direction: column;
    box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.226);
}

.mainPage > .projects > .cards > .card > .title{
    font-size: 1.1rem;
    font-weight: bold;
    cursor: pointer;
}

.cards .card .title:hover {
    color: rgb(233, 178, 0)
}

.mainPage > .projects > .cards > .card > .subText{
    font-size: 0.9rem;
    color: rgb(95, 95, 95);
}

.mainPage > .projects > .cards > .card > .icons{
    display:flex;
    margin-top: auto;
    justify-content: end;
    gap:1vw;
    cursor: pointer;
}

.mainPage > .projects > .cards > .card > .icons > .icon {
    height: 25px;
}

.card .icons .icon:hover {
    filter: invert(83%) sepia(30%) saturate(7118%) hue-rotate(7deg) brightness(100%) contrast(101%);
}

/* sidebar */
.mainPage > .sidebar {
    display:flex;
    flex-direction: column;
}

/* announcement */
.mainPage > .sidebar > .announcements {
    display:grid;
    grid-template-rows: 1fr, 40fr;
}

.announcements > .mainTitle {
    font-weight: bold;
    font-size: 1.1rem;
    padding-bottom: 1vh;
}

.mainPage > .sidebar > .announcements > .container{
    display:flex;
    flex-direction: column;
    background-color: white;
    border-radius: 10px;
    box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.226);
    padding: 3vh 2vw;
    height: 32vh;
    font-size: 0.7rem;
    overflow-y: auto;
}

.card > .title{
    font-weight: bold;
    font-size: 0.8rem;
    margin-bottom: 0.1vh;
    cursor: pointer
}

.card .title:hover {
    color: rgb(233, 178, 0)
}

.card > .subtext {
    color: rgb(95, 95, 95);
}

.line {
    height: 0.2vh;
    width: auto;
    background-color: rgb(204, 204, 204);
    margin: 1vh 0vw;
}

/* trending */

.trending {
    padding-top: 3vh;
    display: grid;
    grid-template-rows: 1fr, 40fr;
}

.trending .mainTitle {
    font-weight: bold;
    font-size: 1.1rem;
    padding-bottom: 1vh;
}

.trending .container {
    background-color: white;
    border-radius: 10px;
    box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.226);
    height: 32vh;
    padding: 2vh 2vw;
    display: flex;
    flex-direction: column;
    overflow: auto;
    gap: 2vh;
}

.trending .container .user {
    display: flex;
    gap: 1vw;
}

.trending .container .user .userinfo {
    display: flex;
    flex-direction: column;
}

.userinfo .username {
    font-weight: bold;
    cursor: pointer
}

.userinfo .username:hover {
    color: rgb(233, 178, 0);
}

.userinfo .caption {
    color: rgb(95, 95, 95);
}
.user .userPfp {
    height: 5vh;
    border-radius: 50%;
    cursor: pointer
}

